Fixes and improvements for Jenkins job creation. Support local XmlConfig cache file.